--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,6 +2,7 @@
         @media (max-width: 767px) {
             html, body {
                 min-width: 0;
+                width: 100%;
                 overflow-x: hidden;
             }
             .filters {
